--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" id="home-section">
 
-
+    <a name="top" id="top"></a>
     <div id="overlayer"></div>
     <div class="loader">
         <div class="spinner-border text-primary" role="status">
@@ -699,6 +699,10 @@
             </div>
         </section>
 
+        <div id="backToTop">
+            <a href="#top" class="smoothscroll" style="color: #808080">Back to top</a>
+        </div>
+
         <footer class="site-footer">
             <div class="container">
                 <div class="row">
@@ -717,6 +721,12 @@
                                     <li><a href="#testimonials-section" class="smoothscroll">Fish Species</a></li>
                                     <li><a href="#contact-section" class="smoothscroll">Locations</a></li>
                                     <li><a href="#gallery-section" class="smoothscroll">Gallery</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-md-3 ml-auto">
+                                <h2 class="footer-heading mb-4">Useful Information</h2>
+                                <ul class="list-unstyled">
+                                    <li><a href="./pages/privacyPolicy.html" class="smoothscroll">Privacy Policy</a></li>
                                 </ul>
                             </div>
                         </div>
