Added adsense tag.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         gtag('config', 'UA-116723212-2');
     </script>
 
+    <script data-ad-client="ca-pub-6302039631350813" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <title>Fishing Kerry</title>
     <meta charset="utf-8">
