Added how to catch section.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,14 @@
                                 <li><a href="#home-section" class="nav-link">Home</a></li>
                                 <li><a href="#about-section" class="nav-link">Discover</a></li>
                                 <li><a href="#testimonials-section" class="nav-link">Fish Species</a></li>
-                                <li><a href="#contact-section" class="nav-link">Locations</a></li>
+                                <!-- <li><a href="#contact-section" class="nav-link">Locations</a></li> -->
+                                <li class="has-children">
+                                    <a href="#contact-section">Locations</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#contact-section">Fishing Spots</a></li>
+                                        <li><a href="#catch-section">How to Catch</a></li>
+                                    </ul>
+                                </li>
                                 <li><a href="#gallery-section" class="nav-link">Gallery</a></li>
                             </ul>
                         </nav>
@@ -427,7 +434,7 @@
                         </div>
                         <h2 class="text-black mb-2">Locations</h2>
                         <p class="lead">Most popular locations to fish in Kerry. Each location has specific species of fish that are common to that area.</p>
-                        <p text-muted mb-4> Click on each location to see it on the map.</p>
+                        <p text-muted mb-4> Click on each location to see it on the map</p>
                     </div>
                 </div>
                 <div class=" card-columns ">
@@ -663,6 +670,133 @@
             </div>
         </section>
 
+
+        <section class="site-section" id="catch-section">
+            <div class="container">
+                <div class="row justify-content-center" data-aos="fade-up">
+                    <div class="col-lg-6 text-center heading-section mb-5">
+                        <div class="paws">
+                            <span class='contentIcon' style="color: #fff;"><i class="fas fa-fish"></i></span>
+                        </div>
+                        <h2 class="text-black mb-2">How to Catch</h2>
+                        <p class="text-muted mb-4">Kerry offers a wide variety of fish for most anglers. As different fishing spots in Kerry contain species of fish local to that area, as an angler make the correct choice where to fish next. </p>
+                        <p text-muted mb-4> Hover over each card to see more information</p>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-4 my-2">
+                            <div class="card card-flip h-100">
+                                <div class="card-front text-white bg-primary">
+                                    <div class="card-body">
+                                        <i class="fa fa-arrow-circle-right fa-5x float-right"></i>
+                                        <h3 class="card-title">Sea Bass</h3>
+                                        <p class="card-text">When it comes to catching bass, every season has its opportunities and challenges. Sea bass can caught by surf fishing, plugging, spinning and fly fishing.</p>
+                                    </div>
+                                </div>
+                                <div class="card-back bg-white">
+                                    <div class="card-body text-primary">
+                                        <h3 class="card-title">How</h3>
+                                        <p class="card-text">Popular baits are lugworm, peeler crab and sandeel. Spinners work great, not only for sea bass but trout. For some excitement, anglers can plug or spin from the rocky shores.</p>
+                                        <!-- <a href="#" class="btn btn-outline-primary">Action</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 my-2">
+                            <div class="card card-flip h-100">
+                                <div class="card-front text-white bg-primary">
+                                    <div class="card-body">
+                                        <i class="fa fa-arrow-circle-right fa-5x float-right"></i>
+                                        <h3 class="card-title">Mackeral</h3>
+                                        <p class="card-text">You can catch mackerel at any time of day, especially from a boat. However, by tradition, mackerel fishing is best in the morning. </p>
+                                    </div>
+                                </div>
+                                <div class="card-back bg-white">
+                                    <div class="card-body text-primary">
+                                        <h3 class="card-title">How</h3>
+                                        <p class="card-text">A popular method of catching mackerel is to use mackerel feather lures. These lures are retrieved through the water, mimicking small bait fish.</p>
+                                        <!-- <a href="#" class="btn btn-outline-primary">Action</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 my-2">
+                            <div class="card card-flip h-100">
+                                <div class="card-front text-white bg-primary">
+                                    <div class="card-body">
+                                        <i class="fa fa-arrow-circle-right fa-5x float-right"></i>
+                                        <h3 class="card-title">Thornback Ray</h3>
+                                        <p class="card-text">In most cases rays are caught well out past the surf line. Rarely are they found under your feet.</p>
+                                    </div>
+                                </div>
+                                <div class="card-back bg-white">
+                                    <div class="card-body text-primary">
+                                        <h3 class="card-title">How</h3>
+                                        <p class="card-text">The pulley rig is a single hook rig that mixes the idea of a flowing trace with a mono paternoster. A popular rig used for rays.</p>
+                                        <!-- <a href="#" class="btn btn-outline-primary">Action</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 my-2">
+                            <div class="card card-flip h-100">
+                                <div class="card-front text-white bg-primary">
+                                    <div class="card-body">
+                                        <i class="fa fa-arrow-circle-right fa-5x float-right"></i>
+                                        <h3 class="card-title">Pollock</h3>
+                                        <p class="card-text">Lure fishing is an effective way to catch pollock, with spinners, plugs and especially jelly lures all being used to fish pollock.</p>
+                                    </div>
+                                </div>
+                                <div class="card-back bg-white">
+                                    <div class="card-body text-primary">
+                                        <h3 class="card-title">How</h3>
+                                        <p class="card-text"> Lures such as the Savage Gear sand eels, or minnow imitation lures, such as the popular Fiiish Black Minnow work the best when fishing for pollock.</p>
+                                        <!-- <a href="#" class="btn btn-outline-primary">Action</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 my-2">
+                            <div class="card card-flip h-100">
+                                <div class="card-front text-white bg-primary">
+                                    <div class="card-body">
+                                        <i class="fa fa-arrow-circle-right fa-5x float-right"></i>
+                                        <h3 class="card-title">Flounder</h3>
+                                        <p class="card-text">Flounder are found mostly close to the shore. Over the winter, they migrate to the ocean and do not normally go back to shallow waters until springtime.</p>
+                                    </div>
+                                </div>
+                                <div class="card-back bg-white">
+                                    <div class="card-body text-primary">
+                                        <h3 class="card-title">How</h3>
+                                        <p class="card-text">Best baits to use are mullet, menhaden, croakers, spot and mud minnows. Either use 3/0 to 5/0 circle hooks or a 2/0-4/0 worm hook for flounder fishing.</p>
+                                        <!-- <a href="#" class="btn btn-outline-primary">Action</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 my-2">
+                            <div class="card card-flip h-100">
+                                <div class="card-front text-white bg-primary">
+                                    <div class="card-body">
+                                        <i class="fa fa-arrow-circle-right fa-5x float-right"></i>
+                                        <h3 class="card-title">Conger</h3>
+                                        <p class="card-text">Conger are best caught using whole live fish, hooked through the upper jaw behind the lip, with mackerel, pouting and whiting being the best options.</p>
+                                    </div>
+                                </div>
+                                <div class="card-back bg-white">
+                                    <div class="card-body text-primary">
+                                        <h3 class="card-title">How</h3>
+                                        <p class="card-text">The conger eel will often follow the bait off the bottom before being hooked and can then be played in open water, away from any snags.</p>
+                                        <!-- <a href="#" class="btn btn-outline-primary">Action</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="site-section" id="gallery-section">
             <div class="container-fluid">
