Amended thornback ray content summary on how to catch section.

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                                     <div class="card-body">
                                         <i class="fa fa-arrow-circle-right fa-5x float-right"></i>
                                         <h3 class="card-title">Thornback Ray</h3>
-                                        <p class="card-text">In most cases rays are caught well out past the surf line. Rarely are they found under your feet.</p>
+                                        <p class="card-text">In most cases rays are caught well out past the surf line. Rarely are they found under your feet. Can be caught on baits or lures.</p>
                                     </div>
                                 </div>
                                 <div class="card-back bg-white">
