Updated analytics tracking script.

--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175791243-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175904847-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
+  gtag('config', 'UA-175904847-1');
+</script>
 
-        gtag('config', 'UA-175791243-1');
-    </script>
 
 
     <script data-ad-client="ca-pub-5466096206095031" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
